@@ -26,6 +26,10 @@ Revision history for Perl extension App::Sqitch
        override it. Use this variable to prevent accidental reverts in
        sensitive environments. Thanks to @vectro for the PR (#719; revised in
        #735)!
+     - Fixed test failures due to a bug fix in the Perl URI module
+       (libwww-perl/URI#13). Thanks to @bobfang for the report (#744)!
+     - Fixed test failures due to a change in the generation of DBI DSN by
+       URI::Oracle introduced by libwww-perl/URI-db#23.
 
 1.3.1  2022-10-01T18:49:30Z
      - Fixed a bug introduced in v1.3.0 where the Postgres engine would
